gcc/testsuite/g++.dg/cpp1y/pr59636.C
// { dg-do compile }
// { dg-options "-std=c++1y" }

// PR c++/59636

auto f = []() { return []<>() {}; };  // { dg-error "expected identifier" }

